force-app/main/default/objects/BGHContact__c/BGHContact__c.object-meta.xml
<CustomObject>
    <label>BGH Contact</label>
    <nameField>
        <displayFormat>BGH Contact {0000}</displayFormat>
        <label>BGH Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BGH Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>