force-app/main/default/objects/BGHContact__c/fields/BGHContact__c.field-meta.xml
<CustomField>
    <fullName>BGHContact__c</fullName>
    <label>BGH Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>BGH Contacts</relationshipLabel>
    <relationshipName>BGH_Contacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>