force-app/main/default/objects/BGHContact__c/fields/CompanyBGH__c.field-meta.xml
<CustomField>
    <fullName>CompanyBGH__c</fullName>
    <label>Company BGH</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BGH Contacts</relationshipLabel>
    <relationshipName>BGH_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>